--- a/EntityDynamicAttributes/EntityDynamicAttributes.csproj
+++ b/EntityDynamicAttributes/EntityDynamicAttributes.csproj
@@ -1,17 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net6.0;net7.0;net8.0</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
 		<SignAssembly>True</SignAssembly>
 		<AssemblyOriginatorKeyFile>..\EntityDynamicAttributes.snk</AssemblyOriginatorKeyFile>
 		<AssemblyVersion>1.0.0</AssemblyVersion>
 		<FileVersion>1.0.0</FileVersion>
-		<Version>1.0.0-beta1</Version>
+		<Version>1.0.0-beta2</Version>
 		<Company></Company>
 		<Authors>Leonid Salavatov</Authors>
-		<Copyright>Leonid Salavatov 2023</Copyright>
+		<Copyright>Leonid Salavatov 2024</Copyright>
 		<PackageId>EntityDynamicAttributes</PackageId>
 		<Product>EntityDynamicAttributes</Product>
 		<Title>EntityDynamicAttributes</Title>
@@ -28,7 +28,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
 	</ItemGroup>
 
 </Project>
